# node-paste

./: .gitignore  README.md  cals.http  client.http  docker-compose.yml  package.json
api/: .dockerignore  Dockerfile  client.http  package-lock.json  package.json  tsconfig.json
api/src/: routes.ts  server.ts  setup.ts
api/src/lib/: redis.ts
api/src/reoutes/: message_routes.ts  routes.ts  upload_routers.ts
api/src/routers/: message_routes.ts  routes.ts  upload_routers.ts
api2/: Cargo.toml  client.http  diesel.toml
api2/migrations/: 20240714033722_init.down.sql  20240714033722_init.up.sql  20240804121358_file.down.sql  20240804121358_file.up.sql
api2/migrations/2024-06-19-004225_initial/: down.sql  up.sql
api2/src/: controllers.rs  handler.rs  main.rs  model.rs  models.rs  schema.rs
api2/src/controllers/: files.rs  records.rs
api2/src/routes/: message.rs
api2/temp/: arquivo.txt
nginx/: Dockerfile  nginx.conf
src/: routes.ts  server.ts  setup.ts
src/lisb/: redis.ts
web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
web/src/app/: TailwindClient.ts  global.css  layout.tsx  main_page.tsx  page.tsx
web/src/app/[id]/: page.tsx
web/src/helpers/: api.ts
