[package]
name = "api2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
diesel = { version = "2.2.1", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics",
] }
